--- a/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
+++ b/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "ClothingGAN-Demo.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -22,9 +6,10 @@
         "id": "Bm8iDDKC1LZo"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mfrashad/ClothingGAN/blob/master/ClothingGAN_Demo.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AdiNarendra98/AI-for-Fashion/blob/main/ClothingGAN_Demo.ipynb)\n",
+        "\n",
         "# Clothing GAN demo\n",
-        "Notebook by [@mfrashad](https://mfrashad.com)\n",
+        "Notebook by [@AdiNarendra](https://github.com/AdiNarendra98)\n",
         "\n",
         "\n",
         "<br>\n",
@@ -33,38 +18,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 200
         },
-        "cellView": "form",
         "id": "Kj8mGkmH0xgA",
         "outputId": "6a793110-884d-4f59-89ec-9c5eced9b98a"
       },
-      "source": [
-        "#@title Install dependencies (restart runtime after installing)\n",
-        "from IPython.display import Javascript\n",
-        "display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 200})'''))\n",
-        "!pip install ninja gradio fbpca boto3 requests==2.23.0 urllib3==1.25.11"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "application/javascript": [
-              "google.colab.output.setIframeHeight(0, true, {maxHeight: 200})"
-            ],
+            "application/javascript": "google.colab.output.setIframeHeight(0, true, {maxHeight: 200})",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "output_type": "display_data"
         },
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Collecting ninja\n",
@@ -160,13 +138,19 @@
             "    Uninstalling urllib3-1.24.3:\n",
             "      Successfully uninstalled urllib3-1.24.3\n",
             "Successfully installed Flask-Cors-3.0.10 Flask-Login-0.5.0 analytics-python-1.3.1 backoff-1.10.0 bcrypt-3.2.0 boto3-1.17.105 botocore-1.20.105 cryptography-3.4.7 fbpca-1.0 ffmpy-0.3.0 flask-cachebuster-1.0.0 gradio-2.1.0 jmespath-0.10.0 markdown2-2.4.0 monotonic-1.6 ninja-1.10.0.post2 paramiko-2.7.2 pycryptodome-3.10.1 pynacl-1.4.0 s3transfer-0.4.2 urllib3-1.25.11\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "#@title Install dependencies (restart runtime after installing)\n",
+        "from IPython.display import Javascript\n",
+        "display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 200})'''))\n",
+        "!pip install ninja gradio fbpca boto3 requests==2.23.0 urllib3==1.25.11"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -174,13 +158,9 @@
         "id": "qwf-gggHtA_t",
         "outputId": "68f7afee-6889-4f9c-97d0-de9ba931c206"
       },
-      "source": [
-        "!git clone https://github.com/mfrashad/ClothingGAN.git\n",
-        "%cd ClothingGAN/"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Cloning into 'ClothingGAN'...\n",
@@ -191,46 +171,41 @@
             "Receiving objects: 100% (333/333), 47.08 MiB | 51.89 MiB/s, done.\n",
             "Resolving deltas: 100% (108/108), done.\n",
             "/content/ClothingGAN\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/mfrashad/ClothingGAN.git\n",
+        "%cd ClothingGAN/"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
         },
-        "cellView": "form",
         "id": "2BYsIETVtGnF",
         "outputId": "e3b5c2ac-9c18-4917-de0f-1f2c126aa696"
       },
-      "source": [
-        "#@title Install other dependencies\n",
-        "from IPython.display import Javascript\n",
-        "display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 200})'''))\n",
-        "!git submodule update --init --recursive\n",
-        "!python -c \"import nltk; nltk.download('wordnet')\""
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "application/javascript": [
-              "google.colab.output.setIframeHeight(0, true, {maxHeight: 200})"
-            ],
+            "application/javascript": "google.colab.output.setIframeHeight(0, true, {maxHeight: 200})",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "output_type": "display_data"
         },
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Submodule 'stylegan/stylegan_tf' (https://github.com/NVlabs/stylegan.git) registered for path 'models/stylegan/stylegan_tf'\n",
@@ -241,21 +216,39 @@
             "Submodule path 'models/stylegan2/stylegan2-pytorch': checked out '91ea2a7a4320701535466cce942c9e099d65670e'\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
             "[nltk_data]   Unzipping corpora/wordnet.zip.\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "#@title Install other dependencies\n",
+        "from IPython.display import Javascript\n",
+        "display(Javascript('''google.colab.output.setIframeHeight(0, true, {maxHeight: 200})'''))\n",
+        "!git submodule update --init --recursive\n",
+        "!python -c \"import nltk; nltk.download('wordnet')\""
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "cellView": "form",
         "id": "dJg91yvSwKi3",
         "outputId": "15c2285c-e8da-45b9-bdc2-9bab3709b270"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "StyleGAN2: Optimized CUDA op FusedLeakyReLU not available, using native PyTorch fallback.\n",
+            "StyleGAN2: Optimized CUDA op UpFirDn2d not available, using native PyTorch fallback.\n",
+            "Downloading https://drive.google.com/uc?export=download&id=1-F-RMkbHUv_S_k-_olh43mu5rDUMGYKe\n"
+          ]
+        }
+      ],
       "source": [
         "#@title Load Model\n",
         "selected_model = 'lookbook'\n",
@@ -316,26 +309,16 @@
         "      if item == 'lat_stdev':\n",
         "        for i in range(comps[item].shape[0]):\n",
         "          latent_stdevs.append(comps[item][i])"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "StyleGAN2: Optimized CUDA op FusedLeakyReLU not available, using native PyTorch fallback.\n",
-            "StyleGAN2: Optimized CUDA op UpFirDn2d not available, using native PyTorch fallback.\n",
-            "Downloading https://drive.google.com/uc?export=download&id=1-F-RMkbHUv_S_k-_olh43mu5rDUMGYKe\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "cellView": "form",
         "id": "uCR_3Ghos2kK"
       },
+      "outputs": [],
       "source": [
         "#@title Define functions\n",
         "from ipywidgets import fixed\n",
@@ -483,21 +466,68 @@
         "  with imageio.get_writer(movieName, mode='I') as writer:\n",
         "    for image in log_progress(list(imgs), name = \"Creating animation\"):\n",
         "        writer.append_data(img_as_ubyte(image))"
-      ],
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 640
         },
-        "cellView": "form",
         "id": "jneXxZnNwHo5",
         "outputId": "c8e2b76e-3a00-47f5-ba2d-51606f09ee93"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
+            "This share link will expire in 24 hours. If you need a permanent link, visit: https://gradio.app/introducing-hosted (NEW!)\n",
+            "Running on External URL: https://10342.gradio.app\n",
+            "Interface loading below...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "\n",
+              "        <iframe\n",
+              "            width=\"900\"\n",
+              "            height=\"500\"\n",
+              "            src=\"https://10342.gradio.app\"\n",
+              "            frameborder=\"0\"\n",
+              "            allowfullscreen\n",
+              "        ></iframe>\n",
+              "        "
+            ],
+            "text/plain": [
+              "<IPython.lib.display.IFrame at 0x7f3d693d3bd0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "(<Flask 'gradio.networking'>,\n",
+              " 'http://127.0.0.1:7860/',\n",
+              " 'https://10342.gradio.app')"
+            ]
+          },
+          "execution_count": 5,
+          "metadata": {
+            "tags": []
+          },
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "#@title Demo UI\n",
         "import gradio as gr\n",
@@ -570,56 +600,23 @@
         "inputs = [seed1, seed2, content, style, truncation, c0, c1, c2, c3, c4, c5, c6, start_layer, end_layer]\n",
         "\n",
         "gr.Interface(generate_image, inputs, [\"image\", \"image\"], live=True, title=\"ClothingGAN\").launch()"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
-            "This share link will expire in 24 hours. If you need a permanent link, visit: https://gradio.app/introducing-hosted (NEW!)\n",
-            "Running on External URL: https://10342.gradio.app\n",
-            "Interface loading below...\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "\n",
-              "        <iframe\n",
-              "            width=\"900\"\n",
-              "            height=\"500\"\n",
-              "            src=\"https://10342.gradio.app\"\n",
-              "            frameborder=\"0\"\n",
-              "            allowfullscreen\n",
-              "        ></iframe>\n",
-              "        "
-            ],
-            "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7f3d693d3bd0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(<Flask 'gradio.networking'>,\n",
-              " 'http://127.0.0.1:7860/',\n",
-              " 'https://10342.gradio.app')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "name": "ClothingGAN-Demo.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
