--- a/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
+++ b/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
@@ -6,7 +6,7 @@
         "id": "Bm8iDDKC1LZo"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AdiNarendra98/AI-for-Fashion/blob/main/ClothingGAN_Demo.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AdiNarendra98/AI-for-Fashion/blob/main/Guccio%20AI(Clothing%20Design%20Generator)/ClothingGAN_Demo.ipynb)\n",
         "\n",
         "# Clothing GAN demo\n",
         "Notebook by [@AdiNarendra](https://github.com/AdiNarendra98)\n",
