--- a/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
+++ b/Guccio AI(Clothing Design Generator)/ClothingGAN_Demo.ipynb
@@ -175,7 +175,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/mfrashad/ClothingGAN.git\n",
+        "!git clone https://github.com/AdiNarendra98/AI-for-Fashion/tree/main/Guccio%20AI(Clothing%20Design%20Generator).git\n",
         "%cd ClothingGAN/"
       ]
     },
